Re-implement Visualize Wizard using Gallery component for selecting visualization type (#10972)
* Add Gallery and GalleryButton components to UI Framework.
* Re-implement Visualize Wizard using Gallery component for selecting visualization type.

--- a/components/index.scss
+++ b/components/index.scss
@@ -249,6 +249,7 @@ body {
 @import "event/index";
 @import "form/index";
 @import "form_layout/index";
+@import "gallery/index";
 @import "header_bar/index";
 @import "icon/index";
 @import "info_panel/index";
