[WIP] KUI sass variable namespacing / rework (#11033)
* more specific namespacing and structure for sass variables

* variable scoping at the component level

* more sass variable scoping

* more sass variable scoping

* more specific namespacing and structure for sass variables

variable scoping at the component level

more sass variable scoping

more sass variable scoping

* fix font weight sass vars

--- a/components/badge/_badge.scss
+++ b/components/badge/_badge.scss
@@ -3,8 +3,8 @@
   margin-left: 0.5em;
   padding: 0.1em 0.7em;
   vertical-align: middle;
-  font-size: 11px;
-  line-height: $lineHeight;
+  font-size: $badgeFontSize;
+  line-height: $globalLineHeight;
   letter-spacing: 0.1em;
   text-transform: uppercase;
 }
