--- a/components/modal/_modal_overlay.scss
+++ b/components/modal/_modal_overlay.scss
@@ -9,5 +9,5 @@
   align-items: center;
   justify-content: center;
   padding-bottom: 10vh;
-  background-color: rgba(#000000, 0.3);
+  background-color: $modalOverlayBackground;
 }
