--- a/components/status_text/_status_text.scss
+++ b/components/status_text/_status_text.scss
@@ -4,21 +4,21 @@
 }
 
 .kuiStatusText--info {
-  color: $infoColor;
+  color: $globalInfoColor;
 }
 
 .kuiStatusText--success {
-  color: $successColor;
+  color: $globalSuccessColor;
 }
 
 .kuiStatusText--warning {
-  color: $warningColor;
+  color: $globalWarningColor;
 }
 
 .kuiStatusText--error {
-  color: $errorColor;
+  color: $globalDangerColor;
 }
 
-  .kuiStatusText__icon {
-    margin-right: 6px;
-  }
+.kuiStatusText__icon {
+  margin-right: 6px;
+}
