--- a/components/tool_bar/_tool_bar.scss
+++ b/components/tool_bar/_tool_bar.scss
@@ -5,7 +5,7 @@
 
   padding: $toolBarPadding;
   height: $toolBarHeight;
-  background-color: $standoutBackgroundColor;
+  background-color: $globalBorderColor;
 }
 
 .kuiToolBarSection {
