--- a/components/card/_card.scss
+++ b/components/card/_card.scss
@@ -1,10 +1,10 @@
 .kuiCard {
   display: flex;
   flex-direction: column;
-  border: 1px solid #E0E0E0;
-  border-radius: 4px;
+  border: 1px solid $cardBorderColor;
+  border-radius: $globalBorderRadius;
   overflow: hidden;
-  line-height: $lineHeight;
+  line-height: $globalLineHeight;
 }
 
   .kuiCard__description {
@@ -16,16 +16,16 @@
   }
 
     .kuiCard__descriptionTitle {
-      font-size: 14px;
+      font-size: $globalFontSize;
       font-weight: bold;
       margin-bottom: 10px;
       text-align: center;
-      max-width: calc(100% - 48px);
+      max-width: $cardMaxWidth;
     }
 
     .kuiCard__descriptionText {
-      font-size: 14px;
-      max-width: calc(100% - 48px);
+      font-size: $globalFontSize;
+      max-width: $cardMaxWidth;
     }
 
   .kuiCard__footer {
