--- a/components/loading_items/_loading_items.scss
+++ b/components/loading_items/_loading_items.scss
@@ -1,6 +1,6 @@
 .kuiLoadingItems {
   padding: 30px;
-  font-size: 18px;
-  color: $subduedFontColor;
-  line-height: $lineHeight;
+  font-size: $globalTitleFontSize;
+  color: $globalSubduedTextColor;
+  line-height: $globalLineHeight;
 }
