--- a/components/local_nav/_local_breadcrumbs.scss
+++ b/components/local_nav/_local_breadcrumbs.scss
@@ -1,4 +1,3 @@
-
 /**
  * 1. Breadcrumbs are placed in the top-left corner and need to be bumped over
  *    a bit.
@@ -10,52 +9,52 @@
   padding-left: $localNavSideSpacing; /* 1 */
 }
 
-  .kuiLocalBreadcrumb {
-    & + & {
-      margin-left: 6px;
+.kuiLocalBreadcrumb {
+  & + & {
+    margin-left: 6px;
 
-      &:before {
-        content: '/';
-        user-select: none;
-        margin-right: 4px;
-        color: $localNavBreadcrumbDelimiterColor;
+    &:before {
+      content: '/';
+      user-select: none;
+      margin-right: 4px;
+      color: $localNavBreadcrumbDelimiterColor;
 
-        @include darkTheme {
-          color: $localNavBreadcrumbDelimiterColor--darkTheme;
-        }
-      }
-    }
-
-    &:last-child {
-      .kuiLocalBreadcrumb__link {
-        color: $localNavTextColor;
-        cursor: default;
-
-        &:hover {
-          text-decoration: none;
-        }
-
-        @include darkTheme {
-          color: $localNavTextColor--darkTheme;
-        }
+      @include darkTheme {
+        color: $localNavBreadcrumbDelimiterColor--darkTheme;
       }
     }
   }
 
+  &:last-child {
     .kuiLocalBreadcrumb__link {
-      font-size: $localNavFontSizeNormal;
-      color: #5a5a5a;
-      text-decoration: none;
+      color: $localNavTextColor;
+      cursor: default;
 
       &:hover {
-        text-decoration: underline;
+        text-decoration: none;
       }
 
       @include darkTheme {
-        color: $localNavButtonTextColor--darkTheme;
+        color: $localNavTextColor--darkTheme;
       }
     }
+  }
+}
 
-    .kuiLocalBreadcrumb__emphasis {
-      font-weight: 700;
-    }
+.kuiLocalBreadcrumb__link {
+  font-size: $globalFontSize;
+  color: $localBreadcrumbLinkColor;
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
+  }
+
+  @include darkTheme {
+    color: $localNavButtonTextColor--darkTheme;
+  }
+}
+
+.kuiLocalBreadcrumb__emphasis {
+  font-weight: $globalFontWeightBold;
+}
