--- a/components/menu_button/_index.scss
+++ b/components/menu_button/_index.scss
@@ -1,2 +1,13 @@
+$menuButtonFontSize: 12px;
+$menuButtonBasicTextColor: #5a5a5a;
+$menuButtonBasicBackgroundColor: #ffffff;
+$menuButtonBasicHoverBackgroundColor: #F2F2F2;
+$menuButtonBasicDisabledTextColor: #9B9B9B;
+$menuButtonDangerTextColor: #D76051;
+$menuButtonDangerBackgroundColor: #ffffff;
+$menuButtonDangerHoverTextColor: #FFFFFF;
+$menuButtonDangerHoverBackgroundColor: #D76051;
+$menuButtonDangerHoverDisabledTextColor: #9B9B9B;
+
 @import "menu_button";
 @import "menu_button_group";
