--- a/components/toggle_button/_toggle_button.scss
+++ b/components/toggle_button/_toggle_button.scss
@@ -10,14 +10,14 @@
   padding: 0;
   font-size: inherit; /* 1 */
   line-height: inherit; /* 1 */
-  color: $linkColor;
+  color: $globalLinkColor;
 
   &:active {
-    color: $linkColor !important; /* 2 */
+    color: $globalLinkColor !important; /* 2 */
   }
 
   &:hover {
-    color: $linkHoverColor !important; /* 2 */
+    color: $globalLinkHoverColor !important; /* 2 */
     text-decoration: underline;
   }
 }
