--- a/components/tool_bar/_tool_bar_search.scss
+++ b/components/tool_bar/_tool_bar_search.scss
@@ -21,13 +21,13 @@
 
   flex: 1 1 auto;
   max-width: 800px;
-  line-height: $lineHeight;
+  line-height: $globalLineHeight;
 }
 
 .kuiToolBarSearchBox {
   flex: 1 1 auto;
   position: relative;
-  font-size: $fontSize;
+  font-size: $globalFontSize;
 }
 
   .kuiToolBarSearchBox__icon {
@@ -45,14 +45,14 @@
     width: 100%;
     min-width: 200px;
     padding: 4px 12px 5px 28px;
-    font-family: $font; /* 1 */
+    font-family: $globalFontFamily; /* 1 */
     background-color: #FFFFFF;
-    color: $fontColor;
-    border-radius: $buttonBorderRadius;
+    color: $globalFontColor;
+    border-radius: $globalBorderRadius;
     font-size: 1em;
     border: 1px solid #ffffff;
     line-height: normal; /* 1 */
-    transition: border-color $formTransitionTiming;
+    transition: border-color $globalInputTransitionTiming;
 
     &:focus {
       @include formControlFocus;
