--- a/components/tool_bar/_tool_bar_text.scss
+++ b/components/tool_bar/_tool_bar_text.scss
@@ -2,8 +2,8 @@
  * 1. We don't want the text to take up two lines and overflow the ToolBar.
  */
 .kuiToolBarText {
-  font-size: $fontSize;
-  line-height: $lineHeight;
+  font-size: $globalFontSize;
+  line-height: $globalLineHeight;
   color: #5A5A5A;
   white-space: nowrap; /* 1 */
 }
