--- a/components/view/_view.scss
+++ b/components/view/_view.scss
@@ -1,5 +1,5 @@
 .kuiView {
-  background-color: #FFFFFF;
+  background-color: $viewBackground;
   flex: 1 1 auto;
 }
 
@@ -11,7 +11,7 @@
 
 .kuiViewContent--constrainedWidth {
   width: 100%;
-  max-width: 1100px;
+  max-width: $viewContentMaxWidth;
   margin-left: auto;
   margin-right: auto;
 }
