Make local breadcrumb links look like Links. (#11058)

--- a/components/local_nav/_index.scss
+++ b/components/local_nav/_index.scss
@@ -14,7 +14,7 @@ $localDropdownFormNoteTextColor: #737373;
 $localTabTextColor: $localNavButtonTextColor;
 $localTabTextColor-isHover: $localNavButtonTextColor-isHover;
 $localTabTextColor-isSelected: $localNavButtonTextColor-isHover;
-$localBreadcrumbLinkColor: #5a5a5a;
+$localBreadcrumbLinkColor: #328caa;
 $localSearchButtonBackgroundColor: #9c9c9c;
 $localSearchButtonTextColor: #ffffff;
 
