Fix visual bugs with SavedObjectFinder UI. (#11029)
* Convert Saved Object Finder search box to use UI Framework components.
* Add dark theme styles for basic Button, TextInput, SearchInput, TextArea, and Select components.
* Fix appearance of SavedObjectFinder in Visualize Wizard.
* Make appearance of PaginatedSelectableList consistent with SavedObjectFinder.
* Remove unused LESS.

--- a/components/_mixins.scss
+++ b/components/_mixins.scss
@@ -30,6 +30,10 @@
   font-weight: 400;
   line-height: $globalLineHeight;
   color: $globalFontColor;
+
+  @include darkTheme {
+    color: $globalInputTextColor--darkTheme;
+  }
 }
 
 @mixin formControl {
@@ -57,6 +61,15 @@
   &:disabled {
     opacity: 0.4;
     cursor: not-allowed;
+  }
+
+  @include darkTheme {
+    background-color: $globalInputBackgroundColor--darkTheme;
+    border-color: $globalInputBorderColor--darkTheme;
+
+    &:focus {
+      @include formControlFocus;
+    }
   }
 }
 
