--- a/components/_variables.scss
+++ b/components/_variables.scss
@@ -17,6 +17,7 @@ $globalInputBorderColor: $globalInputBackgroundColor;
 
 // Dark theme colors
 $globalTextColor--darkTheme: #cecece;
+$globalBackgroundColor--darkTheme: #777777;
 $globalLinkColor--darkTheme: #b7e2ea;
 $globalLinkColor-isHover--darkTheme: #def2f6;
 $globalInputTextColor--darkTheme: $globalTextColor--darkTheme;
