--- a/components/form/_select.scss
+++ b/components/form/_select.scss
@@ -9,4 +9,8 @@
   background-size: 14px;
   background-repeat: no-repeat;
   background-position: calc(100% - 8px); /* 2 */
+
+  @include darkTheme {
+    background-image: url('data:image/svg+xml;utf8,<svg width="1792" height="1792" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1408 704q0 26-19 45l-448 448q-19 19-45 19t-45-19l-448-448q-19-19-19-45t19-45 45-19h896q26 0 45 19t19 45z" fill="#CECECE"/></svg>'); /* 1 */
+  }
 }
