--- a/components/button/_index.scss
+++ b/components/button/_index.scss
@@ -11,6 +11,9 @@ $buttonBasicTextColor: #5a5a5a;
 $buttonBasicBackgroundColor: #F2F2F2;
 $buttonBasicHoverBackgroundColor: #9B9B9B;
 $buttonBasicDisabledTextColor: #9B9B9B;
+$buttonBasicTextColor--darkTheme: #FFF;
+$buttonBasicBackgroundColor--darkTheme: #9c9c9c;
+$buttonBasicHoverBackgroundColor--darkTheme: darken($buttonBasicBackgroundColor--darkTheme, 20%);
 
 // Primary
 $buttonPrimaryBackgroundColor: #6EADC1;
