--- a/doc_site/src/variables.scss
+++ b/doc_site/src/variables.scss
@@ -1,11 +1,16 @@
-
 $guideLineHeight: 24px;
 $guideNavHeight: 60px;
 $guideSideNavWidth: 400px;
 $guideSideNavSmallWidth: 220px;
-$guideCodeViewerWidth: 700px;
-$guideCodeViewerSmallWidth: 580px;
+$guideCodeViewerWidth: 660px;
+$guideCodeViewerSmallWidth: 520px;
 $guideCodeViewerTransition: 0.2s ease;
+
+// Colors
+$guideBaseBackgroundColor: #f7f7f7;
+$guidePanelBackgroundColor: #ffffff;
+$guideTextColor: #444;
+$guideLinkHoverColor: #00a9e5;
 
 $normalBreakpoint: 1900px;
 
