--- a/doc_site/src/views/home/_home_view.scss
+++ b/doc_site/src/views/home/_home_view.scss
@@ -11,7 +11,7 @@
     max-width: 600px;
     max-height: 500px;
     padding: 60px;
-    margin-bottom: 20px;
+    margin: 20px;
     border-radius: 3px;
     background-color: #e8e8e8;
     line-height: $guideLineHeight;
