--- a/doc_site/src/components/guide_nav/_guide_nav.scss
+++ b/doc_site/src/components/guide_nav/_guide_nav.scss
@@ -7,16 +7,16 @@
   left: 0;
   right: 0;
   height: $guideNavHeight;
-  background-color: #e8488b;
-  color: #ffffff;
-  box-shadow:
-    inset 0 -20px 18px rgba(#5a1029, 0.2),
-    inset 0 -5px 4px rgba(#5a1029, 0.3);
-  transition: height 0.3s ease;
+  border-bottom: 1px solid #CCCCCC;
+  color: $guideTextColor;
+  background-color: $guidePanelBackgroundColor;
+  transition: height 0.3s ease, box-shadow 0.3s linear;
   overflow: hidden;
+  box-shadow: 0 0 0 rgba(black, 0.3);
 
   &.is-guide-nav-open {
     height: 100%;
+    box-shadow: 0 40px 200px rgba(black, 0.05);
   }
 }
 
@@ -36,17 +36,17 @@
 
       &.is-menu-button-pinned,
       &:hover {
-        background-color: rgba(black, 0.15);
+        background-color: rgba(black, 0.05);
       }
 
       &:active {
         background-color: rgba(black, 0.2);
-        box-shadow: inset 0 2px 8px rgba(black, 0.2);
+        box-shadow: inset 0 2px 8px rgba(black, 0.1);
       }
     }
 
     .guideNav__title {
-      color: white;
+      color: $guideTextColor;
       text-decoration: none;
       font-size: 18px;
     }
@@ -61,7 +61,7 @@
   @include scrollbar;
   display: flex;
   overflow: auto;
-  min-height: calc(100vh - 100px);
+  min-height: calc(100vh - #{$guideNavHeight});
 }
 
 .guideNavItems {
@@ -83,15 +83,14 @@
 
 .guideNavItem {
   min-width: 200px;
-  color: white;
+  color: $guideTextColor;
   text-decoration: none;
   font-size: 20px;
   line-height: 20px;
   padding: 8px 20px;
   margin-left: 5px;
-  border-radius: 3px;
 
   &:hover {
-    background-color: rgba(black, 0.15);
+    color: $guideLinkHoverColor;
   }
 }
