--- a/doc_site/src/components/guide_page/_guide_page.scss
+++ b/doc_site/src/components/guide_page/_guide_page.scss
@@ -1,4 +1,3 @@
-
 @import "../../variables";
 
 .guidePage {
@@ -6,12 +5,15 @@
 }
 
 .guidePageBody {
-  $topPadding: 40px;
-
+  $topPadding: 31px;
+  background-color: $guidePanelBackgroundColor;
+  border: 1px solid #CCCCCC;
+  border-radius: 4px;
   flex: 1 1 auto;
-  padding: $topPadding 80px 0 120px + $guideSideNavWidth;
+  padding: 40px 60px;
+  margin: 10px 10px 10px 20px + $guideSideNavWidth;
 
   @include whenNarrowerThan($normalBreakpoint) {
-    padding: $topPadding 20px 0 20px + $guideSideNavSmallWidth;
+    margin: 10px 10px 10px 20px + $guideSideNavSmallWidth;
   }
 }
