Update Settings page with UI Framework components. (#11272)
* Update Settings page with UI Framework components.
* Add examples for new primary MenuButton, SubText, TextTitle, and VerticalRhythmSmall components.

--- a/components/table/_table.scss
+++ b/components/table/_table.scss
@@ -78,6 +78,12 @@
   border-top: $globalBorderThin;
 }
 
+.kuiTableRowCell--wrap {
+  .kuiTableRowCell__liner {
+    white-space: normal;
+  }
+}
+
 /**
  * 1. We don't want to create too strong a disconnect between the original row and the row
  *    that contains its expanded details.
