--- a/doc_site/src/views/table/table.html
+++ b/doc_site/src/views/table/table.html
@@ -131,9 +131,9 @@
           <input type="checkbox" class="kuiCheckBox">
         </div>
       </td>
-      <td class="kuiTableRowCell">
+      <td class="kuiTableRowCell kuiTableRowCell--wrap">
         <div class="kuiTableRowCell__liner">
-          <a class="kuiLink" href="#">Dog</a>
+          <a class="kuiLink" href="#">You can also specify that really long content wraps instead of becoming truncated with an ellipsis (which is the default behavior)</a>
         </div>
       </td>
       <td class="kuiTableRowCell">
