--- a/components/_variables.scss
+++ b/components/_variables.scss
@@ -28,6 +28,7 @@ $globalInputBorderColor--darkTheme: $globalInputBackgroundColor--darkTheme;
 $globalFontFamily: "Open Sans", Helvetica, Arial, sans-serif;
 $globalFontSize: 14px;
 $globalLineHeight: 1.5;
+$globalSubTextFontSize: 12px;
 $globalTitleFontSize: 18px;
 $globalFontWeightRegular: 400;
 $globalFontWeightBold: 700;
