[UI Framework] Add support for selects and secondary inputs to LocalNavSearch component of UI Framework. (#11287)
* Add support for selects and secondary inputs to LocalNavSearch component of UI Framework.

* Update UI Framework guidePageBody to constrain width of flex component examples, like the LocalNav.

--- a/components/_variables.scss
+++ b/components/_variables.scss
@@ -47,6 +47,7 @@ $globalSubduedTextColor: #9fa3a7;
 $globalLinkHoverColor: #006E8A;
 $globalSelectedBorderColor: #6EADC1;
 $globalDangerBorderColor: $globalDangerColor;
+$globalFormControlBorderColor: #DEDEDE;
 
 // Borders
 $globalBorderColor: #E4E4E4;
