--- a/doc_site/src/views/local_nav/local_nav_search.html
+++ b/doc_site/src/views/local_nav/local_nav_search.html
@@ -44,6 +44,21 @@
         placeholder="Filter..."
         autocomplete="off"
       >
+
+      <input
+        class="kuiLocalSearchInput kuiLocalSearchInput--secondary"
+        type="text"
+        placeholder="Another input"
+        autocomplete="off"
+        style="width: 150px"
+      >
+
+      <select class="kuiLocalSearchSelect">
+        <option>Alligator</option>
+        <option>Balaclava</option>
+        <option>Castanets</option>
+      </select>
+
       <button class="kuiLocalSearchButton">
         <span class="kuiIcon fa-search"></span>
       </button>
