--- a/doc_site/src/components/guide_page/_guide_page.scss
+++ b/doc_site/src/components/guide_page/_guide_page.scss
@@ -5,15 +5,32 @@
 }
 
 .guidePageBody {
-  $topPadding: 31px;
+  $topMargin: 40px;
+  $leftMargin: 120px + $guideSideNavWidth;
+  $rightMargin: 80px;
+  $scrollBarWidth: 20px;
+
   background-color: $guidePanelBackgroundColor;
   border: 1px solid #CCCCCC;
   border-radius: 4px;
   flex: 1 1 auto;
   padding: 40px 60px;
-  margin: 10px 10px 10px 20px + $guideSideNavWidth;
+  margin: $topMargin $rightMargin 0 $leftMargin;
+  width: calc(100vw - #{$leftMargin + $rightMargin + $scrollBarWidth});
+
+  .is-code-viewer-open & {
+    width: calc(100vw - #{$leftMargin + $rightMargin + $scrollBarWidth + $guideCodeViewerWidth});
+  }
 
   @include whenNarrowerThan($normalBreakpoint) {
-    margin: 10px 10px 10px 20px + $guideSideNavSmallWidth;
+    $leftMargin: 20px + $guideSideNavSmallWidth;
+    $rightMargin: 20px;
+
+    margin: $topMargin $rightMargin 0 $leftMargin;
+    width: calc(100vw - #{$leftMargin + $rightMargin + $scrollBarWidth});
+
+    .is-code-viewer-open & {
+      width: calc(100vw - #{$leftMargin + $rightMargin + $scrollBarWidth + $guideCodeViewerSmallWidth});
+    }
   }
 }
