Add example of disabled kuiSelect. (#11345)

--- a/doc_site/src/views/form/select.html
+++ b/doc_site/src/views/form/select.html
@@ -3,3 +3,9 @@
   <option>Bread</option>
   <option>Cheese</option>
 </select>
+
+<hr class="guideBreak">
+
+<select class="kuiSelect" disabled>
+  <option>Disabled</option>
+</select>
