--- a/components/local_nav/_local_breadcrumbs.scss
+++ b/components/local_nav/_local_breadcrumbs.scss
@@ -26,23 +26,13 @@
   }
 }
 
+/**
+ * 1. Make it a bit darker to contrast with the gray background.
+ */
 .kuiLocalBreadcrumb__link {
+  @include link;
+  color: $localBreadcrumbLinkColor; /* 1 */
   font-size: $globalFontSize;
-  color: $localBreadcrumbLinkColor;
-  text-decoration: none;
-
-  &:hover {
-    color: $localBreadcrumbLinkColor;
-    text-decoration: underline;
-  }
-
-  @include darkTheme {
-    color: $globalLinkColor--darkTheme;
-
-    &:hover {
-      color: $globalLinkColor--darkTheme;
-    }
-  }
 }
 
 .kuiLocalBreadcrumb__emphasis {
